--- a/src/components/Lancamentos/style.module.css
+++ b/src/components/Lancamentos/style.module.css
@@ -53,7 +53,7 @@
         }
 
         a:hover::after {
-            background-color: #fff;
+            background-color: #4A72D8;
             height: 2px;
             width: 192%;
             position: absolute;
@@ -61,14 +61,20 @@
             left: 0;
             transition: 500ms;
         }
-        .preco{
+
+        a:hover {
+            color: #4A72D8;
+        }
+
+        .preco {
             display: flex;
             flex-direction: row;
             gap: 30vh;
-        p {
-            font-size: 30px;
-            font-weight: 600;
-        }
+
+            p {
+                font-size: 30px;
+                font-weight: 600;
+            }
         }
     }
 
@@ -121,14 +127,16 @@
                 transition: 500ms;
             }
         }
-        .preco{
+
+        .preco {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
-            p{
-            font-weight: 500;
-            font-size: 15px;
+
+            p {
+                font-weight: 500;
+                font-size: 15px;
             }
         }
 
@@ -143,8 +151,8 @@
             }
 
             img:hover {
-                transition: 1s;
-                transform: scale(1.03);
+                transition: 0.5s;
+                transform: scale(1.05);
             }
         }
 
@@ -152,7 +160,7 @@
 
     .item3 {
         background: url(../../imgs/lancamentosimgs/ClairObuscure.png) no-repeat center / cover;
-          display: flex;
+        display: flex;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-end;
@@ -193,7 +201,7 @@
         }
 
         a:hover::after {
-            background-color: #fff;
+            background-color: #4A72D8;
             height: 2px;
             width: 192%;
             position: absolute;
@@ -201,14 +209,20 @@
             left: 0;
             transition: 500ms;
         }
-        .preco{
+
+        a:hover {
+            color: #4A72D8;
+        }
+
+        .preco {
             display: flex;
             flex-direction: row;
             gap: 30vh;
-        p {
-            font-size: 30px;
-            font-weight: 600;
-        }
+
+            p {
+                font-size: 30px;
+                font-weight: 600;
+            }
         }
     }
 
@@ -260,14 +274,16 @@
                 transition: 500ms;
             }
         }
-                .preco{
+
+        .preco {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: space-between;
-            p{
-            font-weight: 500;
-            font-size: 15px;
+
+            p {
+                font-weight: 500;
+                font-size: 15px;
             }
         }
 
@@ -282,21 +298,88 @@
             }
 
             img:hover {
-                transition: 1s;
-                transform: scale(1.03);
+                transition: 0.5s;
+                transform: scale(1.05);
             }
         }
 
     }
 
     .item5 {
-        background: #4A72D8;
+       background: #000000;
         color: #fff;
         display: flex;
         flex-direction: row;
 
-        img {
-            width: 100px;
+        .texto {
+            display: flex;
+            flex-direction: column;
+            gap: 1em;
+            width: 50%;
+            justify-content: center;
+            padding: 30px;
+
+            h1 {
+                font-size: 17px;
+            }
+
+            p {
+                font-weight: 300;
+                font-size: 11px;
+            }
+
+            a {
+                display: flex;
+                align-items: center;
+                text-decoration: none;
+                font-weight: 500;
+                color: #fff;
+                width: 80px;
+                position: relative;
+            }
+
+            a::after {
+                content: '';
+                width: 0;
+            }
+
+            a:hover::after {
+                background-color: #fff;
+                height: 2px;
+                width: 100%;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                transition: 500ms;
+            }
+        }
+
+        .preco {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+
+            p {
+                font-weight: 500;
+                font-size: 17px;
+            }
+        }
+
+        .imageDeExemplo {
+            width: 50%;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            img:hover {
+                transition: 0.5s;
+                transform: scale(1.05);
+            }
         }
     }
 }
