--- a/src/components/Lancamentos/style.module.css
+++ b/src/components/Lancamentos/style.module.css
@@ -148,10 +148,10 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transition:transform 0.5s ease;
             }
 
             img:hover {
-                transition: 0.5s;
                 transform: scale(1.05);
             }
         }
@@ -295,10 +295,10 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transition:transform 0.5s ease;
             }
 
             img:hover {
-                transition: 0.5s;
                 transform: scale(1.05);
             }
         }
@@ -374,10 +374,10 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transition:transform 0.5s ease;
             }
 
             img:hover {
-                transition: 0.5s;
                 transform: scale(1.05);
             }
         }
